[workspace]
resolver = "3"

members = [
    "monoio-server",
    "tokio-server",
    "glommio-server",
    "client",
    "config",
    "tokio-uring-server",
    "compio-server",
    "smol-server",
    "may-server",
]

[workspace.dependencies]
monoio = { version = "0.2" }
tokio-uring = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net"] }
glommio = "0.9"
futures-lite = "2.6"
clap = { version = "4.5", features = ["derive"] }
local-sync = "0.1"
compio = "0.14"
nix = { version = "0.29", features = ["process", "sched"] }
socket2 = { version = "0.5" }
smol = "2.0"
may = "0.3"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
